Mise en place de la waiting list